<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:padding="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/register"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"/>
        <TextView
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/et_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/password_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/et_register_password"
            android:drawableLeft="@drawable/img"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_register"
            android:text="Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:backgroundTint="@color/brow"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="already have an account?Login Here"
            android:textColor="#18206F"
            android:textSize="16sp"/>
    </LinearLayout>>

</LinearLayout>